fixed white space when page scales

--- a/front_end/src/components/split_bill_page/SplitBill.css
+++ b/front_end/src/components/split_bill_page/SplitBill.css
@@ -1,7 +1,5 @@
-.split-bill-page {
+body {
     background-image: linear-gradient(rgba(128, 128, 128, 0.404), rgba(179, 171, 171, 0.63));
-    /* height: 100vh; */
-    /* width: 100%; */
 }
 
 /* .column {
